// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interweave (with emoji) renders a single emoji enlarged 1`] = `
<Element tagName="div">
  <div>
    <Emoji
      enlargeEmoji
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F408"
      shortcode=":cat:"
    >
      <img
        alt="🐈️"
        aria-label="cat"
        data-hexcode="1F408"
        data-shortcodes=":cat:"
        data-unicode="🐈️"
        src="1F408"
        style={{ display: "inline-block", verticalAlign: "middle", width: "3em", height: "3em" }}
        title="cat"
      />
    </Emoji>
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji shortcode as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F408"
      shortcode=":cat:"
    >
      <span>🐈️</span>
    </Emoji>
     and 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F415"
      shortcode=":dog:"
    >
      <span>🐕️</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji unicode (escapes) as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F431"
      unicode="🐱"
    >
      <span>🐱</span>
    </Emoji>
     and 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F436"
      unicode="🐶"
    >
      <span>🐶</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;

exports[`Interweave (with emoji) renders emoji unicode (literals) as unicode 1`] = `
<Element tagName="div">
  <div>
    This has 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F408"
      unicode="🐈️"
    >
      <span>🐈️</span>
    </Emoji>
     and 
    <Emoji
      renderUnicode
      emojiSource={{ compact: false, locale: "en", version: "latest" }}
      hexcode="1F415"
      unicode="🐕️"
    >
      <span>🐕️</span>
    </Emoji>
     shortcodes.
  </div>
</Element>
`;
